--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "strict": true,
     "target": "ESNext"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "build.js", ".prettierrc.js"]
 }
