--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
             ${{runner.arch}}
             ${{runner.os}}
             ${{hashFiles('package**.json')}}
+            ${{github.run_id}}
           path: |
             temp.txt
         id: cache
